package modelOldDated.ModuloSubastas;

public class BienConsumo {

    private String idBienConsumo;
    private String nombreBienConsumo;
    private String categoria;
    private String descripcion;

}
